--- a/package.json
+++ b/package.json
@@ -5,8 +5,21 @@
 	"main": "main.js",
 	"author": "Vladimir Maximov",
 	"license": "ISC",
-	"scripts": {},
+	"scripts": {
+		"start": "electron-forge start",
+		"package": "electron-forge package",
+		"make": "electron-forge make"
+	},
 	"dependencies": {
+		"electron-squirrel-startup": "^1.0.0"
+	},
+	"devDependencies": {
+		"@electron-forge/cli": "^6.4.1",
+		"@electron-forge/maker-deb": "^6.4.1",
+		"@electron-forge/maker-rpm": "^6.4.1",
+		"@electron-forge/maker-squirrel": "^6.4.1",
+		"@electron-forge/maker-zip": "^6.4.1",
+		"@electron-forge/plugin-auto-unpack-natives": "^6.4.1",
 		"electron": "^26.1.0"
 	}
 }
