--- a/package.json
+++ b/package.json
@@ -6,20 +6,33 @@
 	"author": "Vladimir Maximov",
 	"license": "ISC",
 	"scripts": {
+		"watch": "webpack --config webpack.common.js --watch",
 		"start": "electron-forge start",
 		"package": "electron-forge package",
 		"make": "electron-forge make"
 	},
 	"dependencies": {
-		"electron-squirrel-startup": "^1.0.0"
+		"electron-squirrel-startup": "^1.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.22.11",
+		"@babel/preset-env": "^7.22.14",
+		"@babel/preset-react": "^7.22.5",
 		"@electron-forge/cli": "^6.4.1",
 		"@electron-forge/maker-deb": "^6.4.1",
 		"@electron-forge/maker-rpm": "^6.4.1",
 		"@electron-forge/maker-squirrel": "^6.4.1",
 		"@electron-forge/maker-zip": "^6.4.1",
 		"@electron-forge/plugin-auto-unpack-natives": "^6.4.1",
-		"electron": "^26.1.0"
+		"babel-loader": "^9.1.3",
+		"css-loader": "^6.8.1",
+		"electron": "^26.1.0",
+		"sass": "^1.66.1",
+		"sass-loader": "^13.3.2",
+		"style-loader": "^3.3.3",
+		"webpack": "^5.88.2",
+		"webpack-cli": "^5.1.4"
 	}
 }
