--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"babel-loader": "^9.1.3",
 		"css-loader": "^6.8.1",
 		"electron": "^26.1.0",
+		"electron-reload": "^2.0.0-alpha.1",
 		"sass": "^1.66.1",
 		"sass-loader": "^13.3.2",
 		"style-loader": "^3.3.3",
