--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"make": "electron-forge make"
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.1",
 		"electron-squirrel-startup": "^1.0.0",
 		"react": "^18.2.0",
+		"react-bootstrap": "^2.8.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
