--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 	"dependencies": {
 		"bootstrap": "^5.3.1",
 		"electron-squirrel-startup": "^1.0.0",
+		"knex": "^2.5.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.8.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"sqlite3": "^5.1.6"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.11",
