--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
 	"scripts": {
 		"watch": "webpack --config webpack.common.js --watch",
 		"start": "electron-forge start",
-		"package": "electron-forge package",
 		"make": "electron-forge make"
 	},
 	"dependencies": {
 		"bootstrap": "^5.3.1",
+		"effector": "^22.8.6",
+		"effector-react": "^22.5.3",
 		"electron-squirrel-startup": "^1.0.0",
 		"knex": "^2.5.1",
 		"react": "^18.2.0",
