--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"scripts": {
 		"watch": "webpack --config webpack.common.js --watch",
 		"start": "electron-forge start",
+		"package": "electron-forge package",
 		"make": "electron-forge make"
 	},
 	"dependencies": {
