--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "make": "electron-forge make"
     },
     "dependencies": {
+        "knex": "^3.1.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "sqlite3": "^5.1.7"
     },
     "devDependencies": {
         "@babel/core": "^7.25.7",
