--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "author": "Vladimir Maximov",
     "license": "ISC",
     "main": "main.js",
+    "_moduleAliases": { "@": "process_main" },
     "scripts": {
         "start": "electron .",
         "watch": "webpack --config webpack.common.js --watch",
@@ -13,6 +14,7 @@
     },
     "dependencies": {
         "knex": "^3.1.0",
+        "module-alias": "^2.2.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "sqlite3": "^5.1.7"
