--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.3.0",
+        "date-fns": "^4.1.0",
         "knex": "^3.1.0",
         "module-alias": "^2.2.3",
         "react": "^18.3.1",
+        "react-datepicker": "^7.5.0",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
         "sqlite3": "^5.1.7"
