--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/knex": "^0.16.1",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
+        "@types/uikit": "^3.14.5",
         "css-loader": "^7.1.2",
         "electron": "^33.1.0",
         "electron-builder": "^25.1.8",
@@ -31,9 +32,14 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.3.0",
+        "date-fns": "^4.1.0",
         "knex": "^3.1.0",
         "react": "^18.3.1",
+        "react-datepicker": "^7.5.0",
         "react-dom": "^18.3.1",
-        "sqlite3": "^5.1.7"
+        "react-redux": "^9.1.2",
+        "sqlite3": "^5.1.7",
+        "uikit": "^3.21.13"
     }
 }
