--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.3.0",
+        "chart.js": "^4.4.6",
         "cross-env": "^7.0.3",
         "date-fns": "^4.1.0",
         "knex": "^3.1.0",
         "react": "^18.3.1",
+        "react-chartjs-2": "^5.2.0",
         "react-datepicker": "^7.5.0",
         "react-dom": "^18.3.1",
         "react-paginate": "^8.2.0",
